--- a/main/resources/org/openjfx/poo/FXLogin.fxml
+++ b/main/resources/org/openjfx/poo/FXLogin.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -16,16 +17,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" minHeight="400.0" minWidth="400.0" prefHeight="550.0" prefWidth="800.0" stylesheets="@css/general.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/25" fx:controller="org.openjfx.poo.Controller.LoginControler">
+<AnchorPane id="AnchorPane" minHeight="400.0" minWidth="400.0" prefHeight="550.0" prefWidth="800.0" stylesheets="@css/general.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.poo.Controller.LoginControler">
    <children>
       <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="143.0" layoutY="108.0" minViewportHeight="450.0" minViewportWidth="450.0" prefHeight="200.0" prefViewportHeight="450.0" prefViewportWidth="800.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <StackPane>
+            <StackPane minHeight="400.0" minWidth="450.0" prefHeight="500.0" prefWidth="871.0">
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
                <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <StackPane minHeight="60.0" minWidth="600.0">
+                        <StackPane minHeight="60.0" minWidth="400.0">
                            <children>
                               <Label fx:id="rtTitle" alignment="CENTER" contentDisplay="CENTER" text="Login">
                                  <font>
@@ -34,12 +37,12 @@
                               </Label>
                            </children>
                         </StackPane>
-                        <StackPane prefHeight="150.0" prefWidth="200.0" stylesheets="@css/forms.css">
+                        <StackPane minHeight="-Infinity" prefHeight="164.0" prefWidth="758.0" stylesheets="@css/forms.css">
                            <children>
-                              <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="140.0" prefWidth="700.0" styleClass="gridPane">
+                              <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="140.0" prefWidth="400.0" styleClass="gridPane">
                                 <columnConstraints>
-                                  <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="387.0" minWidth="10.0" percentWidth="20.0" prefWidth="382.0" />
-                                  <ColumnConstraints halignment="CENTER" maxWidth="568.0" minWidth="10.0" percentWidth="30.0" prefWidth="376.0" />
+                                  <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="387.0" minWidth="10.0" percentWidth="25.0" prefWidth="382.0" />
+                                  <ColumnConstraints halignment="CENTER" maxWidth="568.0" minWidth="10.0" percentWidth="75.0" prefWidth="376.0" />
                                 </columnConstraints>
                                 <rowConstraints>
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -49,12 +52,12 @@
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                        <children>
-                                          <RadioButton mnemonicParsing="false" selected="true" text="usuario">
+                                          <RadioButton fx:id="rbUser" mnemonicParsing="false" selected="true" text="Usuario">
                                              <toggleGroup>
                                                 <ToggleGroup fx:id="userType" />
                                              </toggleGroup>
                                           </RadioButton>
-                                          <RadioButton mnemonicParsing="false" text="RadioButton" toggleGroup="$userType" />
+                                          <RadioButton fx:id="rbAdmin" mnemonicParsing="false" text="Admin" toggleGroup="$userType" />
                                        </children>
                                     </HBox>
                                     <Label text="CPF/CNPJ:">
@@ -64,8 +67,8 @@
                                     </Label>
                                     <Label text="Senha:" GridPane.rowIndex="1" />
                                     <Label text="Tipo:" GridPane.rowIndex="2" />
-                                    <PasswordField GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                    <TextField GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                                    <PasswordField fx:id="tfPassword" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                    <TextField fx:id="tfIdentificator" GridPane.columnIndex="1" />
                                  </children>
                                  <StackPane.margin>
                                     <Insets />
@@ -73,17 +76,27 @@
                               </GridPane>
                            </children>
                            <VBox.margin>
-                              <Insets top="40.0" />
+                              <Insets />
                            </VBox.margin>
                         </StackPane>
-                        <StackPane prefHeight="150.0" prefWidth="200.0" />
-                        <StackPane prefHeight="150.0" prefWidth="200.0" />
+                        <StackPane minHeight="86.0" prefHeight="86.0" prefWidth="758.0">
+                           <children>
+                              <Button fx:id="btnSubmit" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#login" prefHeight="50.0" prefWidth="160.0" styleClass="btSubmit" stylesheets="@css/forms.css" text="Logar" />
+                           </children>
+                        </StackPane>
+                        <StackPane minHeight="-Infinity" minWidth="400.0" prefHeight="60.0" prefWidth="758.0" stylesheets="@css/forms.css">
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label text="Ainda não possui cadastro?" />
+                                    <Button fx:id="btnRegister" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#register" prefHeight="40.0" prefWidth="164.0" styleClass="btRegister" text="Cadastre-se" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </StackPane>
                      </children>
                   </VBox>
                </children>
-               <padding>
-                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-               </padding>
             </StackPane>
          </content>
       </ScrollPane>
