--- a/main/resources/org/openjfx/poo/FXImportador.fxml
+++ b/main/resources/org/openjfx/poo/FXImportador.fxml
@@ -13,13 +13,13 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" minHeight="400.0" minWidth="400.0" prefHeight="730.0" prefWidth="1300.0" stylesheets="@css/general.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.poo.Controller.LoginControler">
+<AnchorPane id="AnchorPane" minHeight="400.0" minWidth="400.0" prefHeight="730.0" prefWidth="1300.0" stylesheets="@css/general.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.poo.Controller.ImportadorController">
    <children>
       <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="143.0" layoutY="108.0" minViewportHeight="450.0" minViewportWidth="450.0" prefHeight="200.0" prefViewportHeight="450.0" prefViewportWidth="800.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <MenuBar fx:id="menuBar" minHeight="50.0">
+                  <MenuBar fx:id="menuBar" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0">
                     <menus>
                       <Menu fx:id="mnName" mnemonicParsing="false" onAction="#User" text="Nome do Importador gonsalves da silva" />
                       <Menu fx:id="mnRequestImport" mnemonicParsing="false" text="Importação">
@@ -38,7 +38,7 @@
                         <Cursor fx:constant="DEFAULT" />
                      </cursor>
                      <padding>
-                        <Insets left="40.0" />
+                        <Insets left="10.0" top="4.0" />
                      </padding>
                   </MenuBar>
                   <StackPane prefHeight="150.0" prefWidth="1298.0" VBox.vgrow="ALWAYS">
@@ -47,12 +47,12 @@
                            <children>
                               <StackPane prefHeight="598.0" prefWidth="563.0">
                                  <children>
-                                    <ListView fx:id="lvImports" maxWidth="1000.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="598.0" prefWidth="560.0" stylesheets="@css/list.css" />
+                                    <ListView fx:id="lvImports" minHeight="100.0" minWidth="-Infinity" prefHeight="500.0" prefWidth="560.0" stylesheets="@css/list.css" />
                                  </children>
                               </StackPane>
                               <StackPane alignment="BOTTOM_RIGHT" minWidth="150.0" prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                                  <children>
-                                    <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#logout" prefHeight="40.0" prefWidth="100.0" styleClass="btnLogout" stylesheets="@css/btn.css" text="Logout" />
+                                    <Button fx:id="btnLogout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#logout" prefHeight="40.0" prefWidth="100.0" styleClass="btnLogout" stylesheets="@css/btn.css" text="Logout" />
                                  </children>
                               </StackPane>
                            </children>
