--- a/main/resources/org/openjfx/poo/FXimportDetails.fxml
+++ b/main/resources/org/openjfx/poo/FXimportDetails.fxml
@@ -16,6 +16,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" minHeight="400.0" minWidth="400.0" prefHeight="730.0" prefWidth="1300.0" stylesheets="@css/general.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.poo.Controller.importDetailsController">
    <children>
@@ -49,9 +50,9 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" StackPane.alignment="CENTER">
                            <children>
-                              <StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0">
+                              <StackPane minHeight="600.0" minWidth="900.0" prefHeight="600.0" prefWidth="1400.0">
                                  <children>
-                                    <VBox alignment="CENTER" maxHeight="900.0" minHeight="500.0" minWidth="-Infinity" prefHeight="650.0" prefWidth="900.0" StackPane.alignment="CENTER">
+                                    <VBox alignment="CENTER" maxHeight="900.0" minHeight="500.0" minWidth="900.0" prefHeight="650.0" prefWidth="1400.0" StackPane.alignment="CENTER">
                                        <children>
                                           <StackPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="900.0">
                                              <children>
@@ -62,12 +63,12 @@
                                                 </Label>
                                              </children>
                                           </StackPane>
-                                          <GridPane prefHeight="90.0" prefWidth="881.0">
+                                          <GridPane alignment="CENTER" prefHeight="90.0" prefWidth="881.0">
                                             <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="10.0" percentWidth="20.0" prefWidth="94.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="440.0" minWidth="10.0" percentWidth="30.0" prefWidth="288.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="366.0" minWidth="10.0" percentWidth="20.0" prefWidth="131.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="356.0" minWidth="10.0" percentWidth="30.0" prefWidth="352.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
+                                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
                                             </columnConstraints>
                                             <rowConstraints>
                                                 <RowConstraints minHeight="45.0" percentHeight="50.0" prefHeight="40.0" vgrow="SOMETIMES" />
@@ -91,18 +92,21 @@
                                           </Separator>
                                           <StackPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="200.0">
                                              <children>
-                                                <Label styleClass="sub-title" text="Produto" />
+                                                <Label styleClass="sub-title" text="Produto">
+                                                   <font>
+                                                      <Font name="Blackadder ITC" size="12.0" />
+                                                   </font></Label>
                                              </children>
                                              <VBox.margin>
                                                 <Insets bottom="10.0" />
                                              </VBox.margin>
                                           </StackPane>
-                                          <GridPane>
+                                          <GridPane alignment="CENTER">
                                              <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="219.0" minWidth="10.0" percentWidth="20.0" prefWidth="94.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="440.0" minWidth="10.0" percentWidth="30.0" prefWidth="288.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="366.0" minWidth="10.0" percentWidth="20.0" prefWidth="131.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="356.0" minWidth="10.0" percentWidth="30.0" prefWidth="352.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="600.0" minWidth="250.0" prefWidth="250.0" />
                                              </columnConstraints>
                                              <rowConstraints>
                                                 <RowConstraints minHeight="45.0" prefHeight="40.0" vgrow="SOMETIMES" />
@@ -129,14 +133,14 @@
                                                 <Label fx:id="rtProductLI" text="l" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                                              </children>
                                           </GridPane>
-                                          <HBox alignment="CENTER_LEFT" minHeight="150.0" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                          <HBox alignment="CENTER" maxHeight="300.0" minHeight="150.0" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                                              <children>
-                                                <StackPane alignment="CENTER_LEFT" maxHeight="240.0" maxWidth="-Infinity" minHeight="100.0" minWidth="-Infinity" prefHeight="240.0" prefWidth="180.0">
+                                                <StackPane alignment="CENTER_LEFT" maxHeight="300.0" maxWidth="-Infinity" minHeight="100.0" minWidth="-Infinity" prefHeight="250.0" prefWidth="180.0">
                                                    <children>
                                                       <Label text="Descrição:" />
                                                    </children>
                                                 </StackPane>
-                                                <Label fx:id="rtProductDescription" prefHeight="295.0" prefWidth="717.0" text="Des" textAlignment="JUSTIFY" HBox.hgrow="ALWAYS" />
+                                                <Label fx:id="rtProductDescription" maxHeight="300.0" prefHeight="250.0" prefWidth="1400.0" text="Des" textAlignment="JUSTIFY" HBox.hgrow="ALWAYS" />
                                              </children>
                                           </HBox>
                                        </children>
@@ -146,9 +150,29 @@
                                     </VBox>
                                  </children>
                               </StackPane>
-                              <StackPane alignment="BOTTOM_RIGHT" minWidth="150.0" prefHeight="648.0" prefWidth="287.0" HBox.hgrow="ALWAYS">
+                              <StackPane minWidth="300.0" prefHeight="648.0" prefWidth="287.0" HBox.hgrow="ALWAYS">
                                  <children>
-                                    <Button fx:id="btnLogout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#logout" prefHeight="40.0" prefWidth="100.0" styleClass="btnLogout" stylesheets="@css/btn.css" text="Logout" />
+                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <Label text="Label" />
+                                             </children>
+                                          </StackPane>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" styleClass="btn-description" stylesheets="@css/btn.css" />
+                                             </children>
+                                          </StackPane>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" styleClass="btn-description" stylesheets="@css/btn.css" text="Button" />
+                                             </children>
+                                          </StackPane>
+                                          <Button mnemonicParsing="false" styleClass="btn-description" stylesheets="@css/btn.css" text="Button" />
+                                          <StackPane prefHeight="150.0" prefWidth="200.0" />
+                                       </children>
+                                    </VBox>
                                  </children>
                               </StackPane>
                            </children>
